--- a/f_lesson_11/css/style.css
+++ b/f_lesson_11/css/style.css
@@ -11,9 +11,10 @@ body {
   min-height: 100%;
   overflow: hidden;
 }
-.who-we-are__container,
+[class*='__container']{
+/* .who-we-are__container,
 .start-page__container,
-.header__container {
+.header__container { */
   margin: 0 auto;
   max-width: 1020px;
 }
@@ -31,13 +32,11 @@ body {
   padding: 68px 0 0 0;
 }
 .header__logo {
-  /* display: inline-block; */
   position: absolute;
   top: 0;
   left: 0;
 }
 .header__info-blocks-body {
-  /* display: inline-block; */
   position: absolute;
   top: 0;
   right: 0;
@@ -83,6 +82,9 @@ body {
   height: 40px;
   padding: 0 34px;
 }
+.button:hover {
+  background: #e36c6a;
+}
 .header__menu {
   position: relative;
   background: #FFFFFF;
@@ -106,6 +108,11 @@ body {
   font-size: 14px;
   line-height: 22px;
   letter-spacing: 0.15px;
+  border-bottom: 1px solid transparent;
+}
+.header__link:hover {
+  border-bottom: 1px solid #000;
+  color: #353c3a;
 }
 .header__link-expand::after{
   content: "";
@@ -126,7 +133,21 @@ body {
 .header__search {
   margin: 0px 22px 0px 0px;
 }
-.header__cart {
+.header__cart,
+.header__search {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  vertical-align: top;
+}
+.header__cart img,
+.header__search img {
+  width: 100%;
+  height: 100%;
+}
+.header__cart:hover,
+.header__search:hover {
+  box-shadow: 0 0 3px 3px rgb(230, 229, 229);
 }
 .header__quantity {
   position: absolute;
@@ -198,6 +219,7 @@ body {
   color: #F5F5F5;
   padding: 0px 0px 0px 33px;
   position: relative;
+  margin: 0px 0px 33px 0px;
 }
 .block-header__subtitle::before{
   content: "";
@@ -218,10 +240,11 @@ body {
   line-height: 1.5;
   letter-spacing: 0.15px;
   color: #F5F5F5;
+  margin: 0px 0px 10px 0px;
 }
 .who-we-are__blob {
   position: absolute;
-  top: 355px;
+  bottom: -26px;
   left: 47px;
   width: 522px;
   height: 379px;
@@ -231,8 +254,8 @@ body {
   position: absolute;
   bottom: -120px;
   overflow: hidden;
-  width: 846px;
-  height: 420px;
+  max-width: 82.94%;
+  /* height: 420px; */
   filter: drop-shadow(0px 8px 16px rgba(38, 38, 38, 0.24)) drop-shadow(0px 16px 24px rgba(38, 38, 38, 0.2));
   border-radius: 40px;
 }
